--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
         "@angular/platform-browser": "^5.2.0",
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
+        "ajv": "^6.0.0",
         "core-js": "^2.4.1",
+        "lodash": "^4.17.5",
+        "node-sass": "^4.0.0",
         "rxjs": "^5.5.6",
+        "webpack": "^3.11.0",
         "zone.js": "^0.8.19"
     },
     "devDependencies": {
         "cross-env": "^5.1.4",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
+        "laravel-mix": "^2.1.8",
+        "ts-loader": "^3.5.0",
         "typescript": "^2.8.3"
     }
 }
