--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     },
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "webpack --mode=development --progress --hide-modules",
         "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production": "webpack --mode=production --progress --hide-modules",
         "postinstall": "npm run prod"
     },
     "dependencies": {
@@ -28,13 +26,20 @@
         "lodash": "^4.17.10",
         "node-sass": "^4.9.3",
         "rxjs": "^6.2.2",
-        "webpack": "^3.12.0",
+        "webpack": "^4.16.5",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "cross-env": "^5.2.0",
-        "laravel-mix": "^2.1.11",
-        "ts-loader": "^3.5.0",
-        "typescript": "^3.0.1"
+        "@angular/compiler-cli": "^6.1.2",
+        "@ngtools/webpack": "^6.1.3",
+        "@types/node": "^10.7.0",
+        "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "file-loader": "^1.1.11",
+        "raw-loader": "^0.5.1",
+        "to-string-loader": "^1.1.5",
+        "tslib": "^1.9.3",
+        "typescript": "<2.10.0",
+        "webpack-cli": "^3.1.0"
     }
 }
